[gd_scene load_steps=9 format=3 uid="uid://vq8jvf0kr06d"]

[ext_resource type="Script" path="res://scripts/node_dragona.gd" id="1_kwywo"]
[ext_resource type="Texture2D" uid="uid://bmmkomcoq462v" path="res://sprites/npc/Dragon final all sprites.png" id="2_tbm4h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hs5ip"]
size = Vector2(275, 65)

[sub_resource type="Animation" id="Animation_iiw1o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDragona:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteDragona:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_0ospr"]
resource_name = "dormir"
length = 4.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDragona:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8, 1.2, 1.6, 2, 2.4, 2.8, 3.2, 3.6, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(4, 0), Vector2i(3, 0), Vector2i(2, 0), Vector2i(1, 0), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_iuquj"]
resource_name = "despertando"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDragona:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4, 3.2, 4, 4.8, 5.6, 6.4, 7.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_mtt30"]
resource_name = "dragona_activa"
length = 3.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDragona:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.6, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51hbk"]
_data = {
"RESET": SubResource("Animation_iiw1o"),
"despertando": SubResource("Animation_iuquj"),
"dormir": SubResource("Animation_0ospr"),
"dragona_activa": SubResource("Animation_mtt30")
}

[node name="NodeDragona" type="Node2D"]
script = ExtResource("1_kwywo")
metadata/_edit_lock_ = true

[node name="SpriteDragona" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_tbm4h")
hframes = 6
vframes = 3
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="SpriteDragona"]
collision_layer = 0
collision_mask = 2
monitorable = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteDragona/Area2D"]
position = Vector2(-410, 70)
shape = SubResource("RectangleShape2D_hs5ip")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." groups=["dragon_animation"]]
libraries = {
"": SubResource("AnimationLibrary_51hbk")
}
speed_scale = 1.5

[node name="Giro" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="SpriteDragona/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="SpriteDragona/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Giro" to="." method="_on_giro_timeout"]
